[gd_scene load_steps=12 format=2]

[ext_resource path="res://SourceHanSansCN-Regular.otf" type="DynamicFontData" id=1]
[ext_resource path="res://Clock.gd" type="Script" id=2]
[ext_resource path="res://bg.jpg" type="Texture" id=3]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )

[sub_resource type="DynamicFont" id=7]
size = 20
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=8]
default_font = SubResource( 7 )

[sub_resource type="DynamicFont" id=3]
size = 40
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=4]
default_font = SubResource( 3 )

[sub_resource type="DynamicFont" id=5]
size = 100
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=6]
default_font = SubResource( 5 )

[node name="Clock" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -50.0
margin_bottom = -60.0
theme = SubResource( 2 )
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 0, 0, 0, 1 )
position = Vector2( 310, 70 )
texture = ExtResource( 3 )

[node name="GMT+8" type="Label" parent="."]
margin_right = 40.0
margin_bottom = 24.0
text = "GMT+8"

[node name="Real_Date" type="Label" parent="."]
margin_top = 27.0
margin_right = 102.0
margin_bottom = 57.0
theme = SubResource( 8 )
text = "1970-01-01"

[node name="Real_time" type="Label" parent="."]
margin_top = 38.0
margin_right = 154.0
margin_bottom = 97.0
theme = SubResource( 4 )
text = "00:00:00"

[node name="jishi" type="Label" parent="."]
margin_left = 173.0
margin_right = 205.0
margin_bottom = 24.0
text = "计时"

[node name="C" type="Label" parent="."]
margin_left = 167.0
margin_right = 615.0
margin_bottom = 145.0
theme = SubResource( 6 )
text = "000:00:00"

[node name="Button" type="Button" parent="."]
margin_left = 9.0
margin_top = 102.0
margin_right = 74.0
margin_bottom = 132.0
text = "启动"

[node name="Button2" type="Button" parent="."]
margin_left = 84.0
margin_top = 102.0
margin_right = 149.0
margin_bottom = 132.0
text = "重置"

[node name="1s" type="Timer" parent="."]
autostart = true

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
[connection signal="timeout" from="1s" to="." method="_on_1s_timeout"]
